@@ -11,3 +11,4 @@ ggplot2 0.8.4  (2008-XX-XX)
 * annotate works with missing x and y (e.g. for geom_rect)
 * position_collide now works with missing values
 * continuous scale limits should now be automatically sorted
+* geom_point: the alpha aesthetic now also affects the fill.
